src/test/deca/syntax/valid/synt/class_multiple_field_decl_same_line_with_assign.deca
/*
    Description: Déclaration de plusieurs attributs de classes à la suite avec assignation

    Résultat : OK
*/
class A{
    int x = 1, y = 2, z = 1;
}
