src/test/deca/syntax/invalid/synt/invalid_l_value.deca
/*
    Description : utilisateur d'une valeur invalide en tant que lvalue

    Résultat : erreur syntaxique
*/
{
    int x = 2;
    1 = x;
}
